# WeatherMonitoring

./: .gitignore  .gitmodules  CMakeLists.txt  READDME.md  README.md
include/: AppController.h  IForecastStrategy.h  IWeatherDataSource.h  IWeatherListener.h  SimpleForecast.h  WeatherData.h  WeatherMonitor.h
src/: APIClient.cpp  AdvancedForecast.cpp  AppController.cpp  ConsoleLogger.cpp  LocalSensor.cpp  SimpleForecast.cpp  WeatherMonitor.cpp
test/: Test.cpp
